# haskell-from-first-principles

./: play.hs
algebraic-datatypes-ch11/: algebra.hs  as.hs  binaryTree.hs  consDecons.hs  exp.hs  nuType.hs  phone.hs  sumProd.hs  typing.hs  vigenere.hs
building-projects-ch13/: syntaxDo.hs
ch2/: FunctionWithLet.hs  FunctionWithWhere.hs  a.hs  ch2-ex.hs  learn.hs  practice.hs  test.hs
ch3/: chapter3exercises.hs  midTerm.hs  print1.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  reverse.hs
ch4/: change-mood.hs  change.hs  exercisech4.hs  greatIfCool1.hs  greatIfCool2.hs
ch5/: arith3Broken.hs  curry.hs  determineTheType.hs  fixIt.hs  parametricity.hs  typeInference1.hs  typeInference2.hs
ch6/: Date.hs  doesItTypeCheck.hs  givenDataType.hs  hie.yaml  insOrd.hs  moreOptions.hs  numberish.hs  triviaTypeClass.hs
ch7/: artih2.hs  binding.hs  casesIntro.hs  exercises.hs  fliper.hs  guards.hs  hof.hs  matchingTuples1.hs  nvim  patternMatching.hs  registeredUser1.hs
ch8/: combinator.scm  combinators.hs  exercises.hs  factorial.hs  rec.hs  wordNumber.hs
folding-lists-ch10/: databasePro.hs  exercises.hs  pratice.hs
functor-ch16/: typeClass.hs
lists-ch9/: RestTail.hs  Take.hs  cipher.hs  exercises.hs  foldBold.hs  myStdFun.hs  zipping.hs
monoid-semigroup-ch15/: implMonoid.hs  implSemi.hs
monoid-semigroup-ch15/exer/: LICENSE  (+2 more)
signaling-adversity-ch12/: eitherlib.hs  exer.hs  maylib.hs  smartConstructors.hs  uniter.hs
testing-ch14/morse/: morse.cabal  package.yaml
testing-ch14/morse/src/: Main.hs  Morse.hs
testing-ch14/morse/tests/: tests.hs
(+21 files in other folders)
