cabal-version: 2.2
name: morse
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/githubuser/morse#readme>
author: Author name here
maintainer: example@example.com
copyright: 2025 Author name here
license: BSD-3-Clause
license-file: LICENSE
category: Text
build-type: Simple

library
  exposed-modules:
    Morse

  ghc-options:
    -Wall
    -fwarn-tabs

  build-depends:
    QuickCheck,
    base >=4.7 && <5,
    containers,

  hs-source-dirs:
    src

  default-language:
    Haskell2010

executable morse
  main-is:
    Main.hs

  ghc-options:
    -Wall
    -fwarn-tabs

  hs-source-dirs:
    src

  build-depends:
    QuickCheck,
    base >=4.7 && <5,
    containers,
    morse,

  default-language:
    Haskell2010

test-suite test
  ghc-options:
    -Wall
    -fno-warn-orphans

  type:
    exitcode-stdio-1.0

  main-is:
    tests.hs

  hs-source-dirs:
    tests

  build-depends:
    QuickCheck,
    base,
    containers,
    morse,

  default-language:
    Haskell2010
